syntax = "proto3";

option go_package = "github.com/8thgencore/mailfort/proto";

package mail.v1;

import "google/api/annotations.proto";

// The request message containing the email and otp code.
message SendEmailWithOTPCodeRequest {
    string email = 1;
    string otp_code = 2;
}

// The response message.
message Response {
    string message = 1;
    bool success = 2;
}

// The error response message.
message ErrorResponse {
    repeated string messages = 1;
    bool success = 2;
}

service MailService {
    // Sends a confirmation email otp code.
    rpc SendConfirmationEmailOTPCode(SendEmailWithOTPCodeRequest) returns (Response) {
        option (google.api.http) = {
            post: "/v1/email-confirmation"
            body: "*"
        };
    }

    // Sends a password reset otp code.
    rpc SendPasswordResetOTPCode(SendEmailWithOTPCodeRequest) returns (Response) {
        option (google.api.http) = {
            post: "/v1/password-reset"
            body: "*"
        };
    }
}
